force-app/main/default/objects/First_Look_Review__c/First_Look_Review__c.object-meta.xml
<CustomObject>
    <label>First Look Review</label>
    <nameField>
        <displayFormat>FLR-{000000}</displayFormat>
        <label>Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>First Look Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>