force-app/main/default/objects/First_Look_Review__c/fields/Bates_Range__c.field-meta.xml
<CustomField>
    <fullName>Bates_Range__c</fullName>
    <description>Display range (formula: Start + &quot; - &quot; + End). Verify formula syntax after Bates_Range_Start__c/Bates_Range_End__c are deployed.</description>
    <formula>Bates_Range_Start__c &amp; &quot; - &quot; &amp; Bates_Range_End__c</formula>
    <label>Bates Range</label>
    <type>Text</type>
</CustomField>