force-app/main/default/objects/First_Look_Review__c/fields/Bates_Range_End__c.field-meta.xml
<CustomField>
    <fullName>Bates_Range_End__c</fullName>
    <description>Last Bates identifier. Required before send.</description>
    <label>Bates Range End</label>
    <length>100</length>
    <type>Text</type>
</CustomField>