force-app/main/default/objects/First_Look_Review__c/fields/Bates_Range_Start__c.field-meta.xml
<CustomField>
    <fullName>Bates_Range_Start__c</fullName>
    <description>First Bates identifier. Required before send.</description>
    <label>Bates Range Start</label>
    <length>100</length>
    <type>Text</type>
</CustomField>