force-app/main/default/objects/First_Look_Review__c/fields/Delivery_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Recipient__c</fullName>
    <description>Recipient snapshot. Required when sent. (Text type maxes out at 255 chars in Salesforce; using LongTextArea to preserve the documented 1,000-char length.)</description>
    <label>Delivery Recipient</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>