force-app/main/default/objects/First_Look_Review__c/fields/Escalation_Sent_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Sent_DateTime__c</fullName>
    <description>No-response or exception escalation timestamp (automation-maintained).</description>
    <label>Escalation Sent</label>
    <type>DateTime</type>
</CustomField>