force-app/main/default/objects/First_Look_Review__c/fields/Exception_Escalation_Required__c.field-meta.xml
<CustomField>
    <fullName>Exception_Escalation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the production requires exception handling.</description>
    <label>Exception/Escalation Required</label>
    <type>Checkbox</type>
</CustomField>