force-app/main/default/objects/First_Look_Review__c/fields/Exception_Notes__c.field-meta.xml
<CustomField>
    <fullName>Exception_Notes__c</fullName>
    <description>Work Order-specific exception explanation.</description>
    <label>Exception Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>