force-app/main/default/objects/First_Look_Review__c/fields/Final_Release_Authorized__c.field-meta.xml
<CustomField>
    <fullName>Final_Release_Authorized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates review conditions have been satisfied. Required before final release.</description>
    <label>Final Release Authorized</label>
    <type>Checkbox</type>
</CustomField>