force-app/main/default/objects/First_Look_Review__c/fields/Final_Release_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Final_Release_DateTime__c</fullName>
    <description>Final production timestamp. Required for completed release.</description>
    <label>Final Release Date/Time</label>
    <type>DateTime</type>
</CustomField>