force-app/main/default/objects/First_Look_Review__c/fields/First_Look_Agreement__c.field-meta.xml
<CustomField>
    <fullName>First_Look_Agreement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>First Look Agreement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>First_Look_Agreement__c.Case__c</field>
            <operation>equals</operation>
            <value>$Source.WorkOrder__r.Legal_Case__c</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>First_Look_Agreement__c</referenceTo>
    <relationshipLabel>First Look Reviews</relationshipLabel>
    <relationshipName>First_Look_Reviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>