force-app/main/default/objects/First_Look_Review__c/fields/Integration_Key__c.field-meta.xml
<CustomField>
    <fullName>Integration_Key__c</fullName>
    <description>Normalized source identity. Required for integrated records.</description>
    <externalId>true</externalId>
    <label>Integration Key</label>
    <length>160</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>