force-app/main/default/objects/First_Look_Review__c/fields/Notification_Sent_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Notification_Sent_DateTime__c</fullName>
    <description>Immediate-send notification timestamp (automation-maintained).</description>
    <label>Case Manager Notification Sent</label>
    <type>DateTime</type>
</CustomField>