force-app/main/default/objects/First_Look_Review__c/fields/Prepared_By__c.field-meta.xml
<CustomField>
    <fullName>Prepared_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prepared By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>First_Look_Reviews1</relationshipName>
    <type>Lookup</type>
</CustomField>