force-app/main/default/objects/First_Look_Review__c/fields/Production_Copy_Saved__c.field-meta.xml
<CustomField>
    <fullName>Production_Copy_Saved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirms exact production copy was preserved. Required before send.</description>
    <label>Production Copy Saved</label>
    <type>Checkbox</type>
</CustomField>