force-app/main/default/objects/First_Look_Review__c/fields/Records_Sent_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Records_Sent_DateTime__c</fullName>
    <description>When the first production was released to the reviewing party. Required when sent.</description>
    <label>Records Sent Date/Time</label>
    <type>DateTime</type>
</CustomField>