force-app/main/default/objects/First_Look_Review__c/fields/Redaction_Request_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Redaction_Request_DateTime__c</fullName>
    <description>When the redaction request was received.</description>
    <label>Redaction Request Date/Time</label>
    <type>DateTime</type>
</CustomField>