force-app/main/default/objects/First_Look_Review__c/fields/Redactions_Completed__c.field-meta.xml
<CustomField>
    <fullName>Redactions_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates all requested redactions are complete.</description>
    <label>Redactions Completed</label>
    <type>Checkbox</type>
</CustomField>