force-app/main/default/objects/First_Look_Review__c/fields/Redactions_Completed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Redactions_Completed_DateTime__c</fullName>
    <description>Redaction completion timestamp.</description>
    <label>Redactions Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>