force-app/main/default/objects/First_Look_Review__c/fields/Redactions_Requested__c.field-meta.xml
<CustomField>
    <fullName>Redactions_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates reviewer requested redactions.</description>
    <label>Redactions Requested</label>
    <type>Checkbox</type>
</CustomField>