force-app/main/default/objects/First_Look_Review__c/fields/Reminder_Sent_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Sent_DateTime__c</fullName>
    <description>Reminder timestamp (automation-maintained).</description>
    <label>Deadline Reminder Sent</label>
    <type>DateTime</type>
</CustomField>