force-app/main/default/objects/First_Look_Review__c/fields/Review_Redaction_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Review_Redaction_Deadline__c</fullName>
    <description>Deadline for review or redaction response. Required before send.</description>
    <label>Review / Redaction Deadline</label>
    <type>DateTime</type>
</CustomField>