force-app/main/default/objects/First_Look_Review__c/fields/Review_Response_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Review_Response_DateTime__c</fullName>
    <description>Reviewer response timestamp.</description>
    <label>Review Response Date/Time</label>
    <type>DateTime</type>
</CustomField>