force-app/main/default/objects/First_Look_Review__c/fields/Review_Response_Received__c.field-meta.xml
<CustomField>
    <fullName>Review_Response_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates a reviewer response was received.</description>
    <label>Review Response Received</label>
    <type>Checkbox</type>
</CustomField>