force-app/main/default/objects/First_Look_Review__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>First Look production lifecycle.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Look Identified</fullName>
                <default>true</default>
                <label>First Look Identified</label>
            </value>
            <value>
                <fullName>Pending Record Preparation</fullName>
            </value>
            <value>
                <fullName>Ready for First Look Release</fullName>
            </value>
            <value>
                <fullName>First Look Sent - Review Pending</fullName>
            </value>
            <value>
                <fullName>Redaction Request Received</fullName>
            </value>
            <value>
                <fullName>Redactions in Process</fullName>
            </value>
            <value>
                <fullName>First Look Expired - No Response</fullName>
            </value>
            <value>
                <fullName>First Look Complete - Approved for Final Release</fullName>
            </value>
            <value>
                <fullName>Exception/Escalation Required</fullName>
            </value>
            <value>
                <fullName>Final Release Required</fullName>
            </value>
            <value>
                <fullName>Final Release Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>