force-app/main/default/objects/First_Look_Review__c/fields/Use_Case_Manager_Pool__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_Manager_Pool__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates notification is routed to the configured pool.</description>
    <label>Use Case Manager Pool</label>
    <type>Checkbox</type>
</CustomField>